
add_executable(example_http_client_request01 client01.cc)
target_link_libraries(example_http_client_request01 ${LIBRARIES})

add_executable(example_http_client_request02 client02.cc)
target_link_libraries(example_http_client_request02 ${LIBRARIES})

add_executable(example_http_client_request03 client03.cc)
target_link_libraries(example_http_client_request03 ${LIBRARIES})

add_executable(example_http_client_request04 client04.cc)
target_link_libraries(example_http_client_request04 ${LIBRARIES})

add_executable(example_http_client_request05 client05.cc)
target_link_libraries(example_http_client_request05 ${LIBRARIES})

